--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <prometheus.version>0.9.0</prometheus.version>
         <graphql-spring-boot-starter.version>5.0.2</graphql-spring-boot-starter.version>
         <graphql-java-tools.version>5.2.4</graphql-java-tools.version>
+        <elasticsearch.version>7.7.0</elasticsearch.version>
 
         <!--   plugin version     -->
         <maven-lombok.version>1.18.10.0</maven-lombok.version>
@@ -186,6 +187,11 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>${mybatis-plus-boot-starter.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-elasticsearch</artifactId>
         </dependency>
 
     </dependencies>
